2005-08-02  Naba Kumar  <naba@gnome.org>

	* scintilla/PlatGTK.cxx, patches/pango-1.8.patch: Better fix
	for pango-1.8 rendering bug.
	
2005-08-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* scintilla/Makefile.am: Fixed a make -j x bug
	
2005-08-02  Johannes Schmid <jhs@gnome.org>
	
	* plugins/subversion/svn-auth.c: Added username/password 
	auto function.

2005-08-01  Naba Kumar  <naba@gnome.org>

	* scintilla/PlatGTK.cxx, patches/pango-1.8.patch: Added index bound
	checks for character width calculations.
	
2005-07-31  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/gdb/debug_tree.c : Inspect memory from locals window.

2005-07-31  Naba Kumar  <naba@gnome.org>

	* scintilla/PlatGTK.cxx, patches/pango-1.8.patch: Fixed text rendering
	messup with pango 1.8. Fixed bug #311846.

2005-07-30  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/gdb/memory.c : Fixed bug 305082.
	
	* plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/gcj.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/wxwin.wiz,
	plugins/project-wizard/templates/xlib-dock.wiz : Spelling fixes.

2005-07-27 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/tools/execute.c:
	Correct a crash if editor is closed while a tool still use it.

2005-07-28  Naba Kumar  <naba@gnome.org>

	* scintilla/*: Updated scintilla from their latest CVS.

2005-07-27  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-ui.c, libanjuta/anjuta-ui.h,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/cvs-plugin/plugin.c, plugins/debug-manager/plugin.c,
	plugins/devhelp/plugin.c, plugins/editor/plugin.c,
	plugins/file-loader/plugin.c, plugins/file-manager/plugin.c,
	plugins/file-wizard/plugin.c, plugins/gdb/plugin.c,
	plugins/glade/plugin.c, plugins/gtodo/plugin.c, plugins/macro/plugin.c,